# AlphaZero

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  dodo.py  doit_systemd.py  requirements-dev.txt  requirements.txt  vcpkg.json
.agents/skills/enforce-doit-check-all/: SKILL.md
.agents/skills/enforce-logging/: SKILL.md
.agents/skills/enforce-switch-statements/: SKILL.md
.agents/skills/enforce-sys-executable/: SKILL.md
.agents/skills/enforce-testability/: SKILL.md
.agents/skills/use-auto/: SKILL.md
.agents/skills/use-doit/: SKILL.md
.agents/skills/use-rg-and-fd/: SKILL.md
.github/workflows/: ci.yml
docs/: GAME_ARCHITECTURE.md  INFERENCE_SERVER.md
engine/: CMakeLists.txt  bindings.cpp  test_libtorch.cpp
engine/game/: CMakeLists.txt  bitboard.cpp  bitboard.hpp  chess.cpp  chess.hpp  connect4.cpp  connect4.hpp  game.hpp
engine/inference/: CMakeLists.txt  basic_infer.cpp  basic_inferer.hpp  inferer.hpp
engine/mcts/: mcts.cpp  mcts.hpp  mcts_factory.cpp  mcts_factory.hpp
engine/profiling/: CMakeLists.txt  benchmark_policy.cpp  cudagraphs_repro.cpp  run_self_play.cpp
engine/tests/: test_chess.cpp  test_mcts.cpp
engine/utils/: CMakeLists.txt  network.cpp  network.hpp  replay_buffer.cpp  replay_buffer.hpp  trainer.cpp  trainer.hpp
game_states/: chess.json  chess_policy_format.json  connect4.json  connect4_policy_format.json
gameplay/: agent.py  client.py  play_game.py  play_game_utils.py
gameplay_client/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
gameplay_client/src/: App.vue  ChessView.vue  Connect4View.vue  WelcomeView.vue  chessboardSetup.ts  style.css
gameplay_server/: .gitignore  eslint.config.js  eslint.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tests.json
gameplay_server/__tests__/: agent.test.ts
gameplay_server/__tests__/game/: connect4.test.ts
gameplay_server/__tests__/routes/: game.test.ts
gameplay_server/src/: agent.ts  db.ts  server.ts
gameplay_server/src/game/: chess.ts  connect4.ts  game.ts  test_chess.ts
gameplay_server/src/routes/: game.ts
inference_server/: CMakeLists.txt  alphazero-inference.service  alphazero-inference@.service  benchmark_batch_size.cpp  inference.env.example  inference_server.cpp
inference_server/args_parser/: inference_server_args.cpp  inference_server_args.hpp
inference_server/model_wrapper/: connect4_model_wrapper.cpp  connect4_model_wrapper.hpp  model_wrapper.cpp  model_wrapper.hpp
inference_server/schema_validator/: schema_validator.cpp  schema_validator.hpp
inference_server/server/: server.cpp  server.hpp
inference_server/tests/: CMakeLists.txt  test_main.cpp
inference_server/tests/payloads/: connect4_board0.json  dummy_model.pt
models/: model
performance_evaluation/: .gitignore  benchmark_batch_size.py  check_format_puzzles.py  evaluator.py  format_puzzles.py  generate_report.py  puzzle_editor.html  style.css  validate_chess_puzzles.py  validate_puzzles.py  write_files.py
performance_evaluation/games/chess/avoid_mate_in_1/: puzzle_1_king_sidesteps.json  puzzle_2_king_retreats.json  puzzle_3_king_climbs.json  puzzle_4_king_centralizes.json
performance_evaluation/games/chess/mate_in_1/: puzzle_1_scholars_mate.json  puzzle_2_back_rank.json  puzzle_3_smothered_mate.json  puzzle_4_queen_king_mate.json  puzzle_5_rook_mate.json
performance_evaluation/games/chess/mate_in_1_or_lose/: puzzle_1_king_corner_race.json  puzzle_2_edge_king_race.json  puzzle_3_open_board_race.json
performance_evaluation/games/chess/mate_in_2/: puzzle_1_two_rooks_ladder.json  puzzle_2_two_rooks_corner.json  puzzle_3_two_rooks_box.json
performance_evaluation/games/chess/win_material/: puzzle_1_hanging_queen.json  puzzle_2_hanging_rook.json  puzzle_3_hanging_bishop.json  puzzle_4_hanging_knight_black_to_move.json  puzzle_5_hanging_rook_black_to_move.json
performance_evaluation/games/connect4/: generate_puzzles.py
performance_evaluation/games/connect4/forced_win_in_2/: diagonal_setup.json  diagonal_setup_flipped.json  double_threat_horiz.json  double_threat_horiz_flipped.json  puzzle_1.json  puzzle_1_flipped.json  puzzle_2.json  puzzle_2_flipped.json
performance_evaluation/games/connect4/positional_puzzles/: play1_to_draw.json  play1_to_draw_flipped.json  play1_to_draw_v2.json  play1_to_draw_v2_flipped.json  play2_to_draw.json  play2_to_draw_flipped.json  play2_to_win.json  play2_to_win_flipped.json  play3_to_draw.json  play3_to_draw_flipped.json  play3_to_win_flipped.json
performance_evaluation/games/connect4/prevent_enemy_winning_in_1/: horizontal.json  horizontal_flipped.json  puzzle_1.json  puzzle_1_flipped.json  puzzle_2.json  puzzle_2_flipped.json  vertical.json  vertical_flipped.json
performance_evaluation/games/connect4/prevent_enemy_winning_in_2/: prevent_diagonal_setup.json  prevent_diagonal_setup_flipped.json  prevent_double_threat_horiz.json  prevent_double_threat_horiz_flipped.json  puzzle_1.json  puzzle_1_flipped.json  puzzle_2.json  puzzle_2_flipped.json
performance_evaluation/games/connect4/win_in_1/: horizontal.json  horizontal_flipped.json  puzzle_1.json  puzzle_1_flipped.json  puzzle_2.json  vertical_flipped.json
performance_evaluation/utils/: flip.py
python/: __main__.py  agent.py  checkpoint_manager.py  connect4.py  game_server.py  inference_server.py  injectors.py  main.py  network.py  playing.py  test_inference_server.py  test_integration.py  train.py
python/inference_service/: __init__.py
python/pybind/: __init__.py
python/test/: test_inference_server.py  test_integration.py  test_tensorrt.py  test_train_loss.py
python/tools/: generate_tensorrt_models.py
python/utils/: __init__.py  clang_tidy_cached.py
training/: CMakeLists.txt  bindings.cpp  self_play.cpp  self_play.hpp
